# mkdocs-tutorial

./: .pre-commit-config.yaml  Makefile  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_website.yml
Docker/: test.dockerfile
docs/: deploy.en.md  deploy.md  documenti.md  extensions.en.md  extensions.md  extra.md  github_pages.en.md  github_pages.md  index.en.md  index.md  mycode.md  setup.en.md  setup.md  test.ipynb
myapp/: main.py
myapp/test/: utils.py
